// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Flex > matches the snapshot 1`] = `
<div
  class="flex gap-3 items-center justify-center"
>
  <span>
    One
  </span>
  <span>
    Two
  </span>
</div>
`;

exports[`Flex.Stack > matches the snapshot 1`] = `
<div
  class="flex gap-2 flex-col"
>
  <span>
    One
  </span>
  <span>
    Two
  </span>
</div>
`;
